default/objects/Mailing_Account_GFN_Report_Log__c/Mailing_Account_GFN_Report_Log__c.object-meta.xml
<CustomObject>
    <description>Logs of Account Report mailing for GFN</description>
    <label>Mailing Account GFN Repor Log</label>
    <nameField>
        <displayFormat>AR#{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mailing Account GFN Repor Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>