default/objects/Mailing_Account_GFN_Report_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mailing Account GFN Repor Logs</relationshipLabel>
    <relationshipName>Mailing_Account_GFN_Repor_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>