default/objects/Mailing_Account_GFN_Report_Log__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>Email</type>
</CustomField>