default/objects/Mailing_Account_GFN_Report_Log__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>