default/objects/Mailing_Account_GFN_Report_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Mailing Account GFN Repor Logs</relationshipLabel>
    <relationshipName>Mailing_Account_GFN_Repor_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>