default/objects/Mailing_Account_GFN_Report_Log__c/fields/Sending_Status__c.field-meta.xml
<CustomField>
    <fullName>Sending_Status__c</fullName>
    <label>Sending Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>