default/objects/Mailing_Account_GFN_Report_Log__c/fields/Starts_Status_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Starts_Status_Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Starts Status Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mailing_Account_GFN_Repor_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>